--- a/Frontend/src/About.css
+++ b/Frontend/src/About.css
@@ -30,7 +30,7 @@
 
 /* Hero Section */
 .about-hero {
-  background-color: var(--light-purple);
+  background-color:#BBD8BC;
   padding: 60px 20px;
 }
 
@@ -61,7 +61,7 @@
 /* Story Section */
 .about-story {
   padding: 60px 20px;
-  background-color: var(--white);
+  background-color: white;
 }
 
 .story-content {
